--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,26 @@
 
 <body>
 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Javascript Vanilla SPA</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+
+        <li class="nav-item">
+          <a class="nav-link" href="#/products">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#/posts">Posts</a>
+        </li>
+
+      </ul>
+    </div>
+  </nav>
+
 </body>
 
 </html>
